--- a/backend/reactdjango/templates/terms-and-conditions-developer.html
+++ b/backend/reactdjango/templates/terms-and-conditions-developer.html
@@ -1,5 +1,5 @@
 {% extends 'header.html' %}
-{% blockcontent %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions </title>
 </head>
+<style>
+    li{
+        padding: 10px;
+    }
+</style>
 <body>
     <h2>
         Terms and Conditions for landlords
