--- a/backend/reactdjango/static/developer.css
+++ b/backend/reactdjango/static/developer.css
@@ -2,10 +2,14 @@
     padding: 0;
     margin: 0;
 }
-
+:root{
+ 
+    --chakra-colors-gray-800: #1A202C;
+    --chakra-colors-gray-900: #171923;
+}
 
 .header{
-    background-color: rgb(7, 4, 19);
+    background-color: #171923;
     width: 100%;
     height: 80px;
     display: flex;
@@ -26,7 +30,7 @@
 }
 .link-container{
     width: 20%;
-    background-color: rgb(7, 4, 19);
+    background-color:  #171923;
     height: 170vh;
     display: inline-block;
     
@@ -51,6 +55,9 @@
     text-decoration: none;
     color: white;
     cursor: pointer;  
+}
+.link-container ul li a:hover{
+    text-decoration: underline;
 }
 
 .terms{
