--- a/backend/reactdjango/templates/profile-update.html
+++ b/backend/reactdjango/templates/profile-update.html
@@ -15,7 +15,7 @@
             <form method="POST" action="/developer-profile-update" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{form}}
-                <input type="submit" value="save">
+                <input class="save" type="submit" value="save">
             </form>
         </div>
     </div>
