--- a/backend/reactdjango/static/sellproperty.css
+++ b/backend/reactdjango/static/sellproperty.css
@@ -21,6 +21,18 @@ button{
     display: block;
     margin-top: 10px;
 }
+
+h4 .message-success, h4 .message-error{
+    margin-bottom: 10px;
+}
+.message-success {
+   position: relative;
+    color: green;
+}
+.message-error {
+    color: red;
+}
+
 @media (max-width: 768px) {
     .sell-property{
         width: 68%;
