--- a/backend/reactdjango/templates/homepage.html
+++ b/backend/reactdjango/templates/homepage.html
@@ -23,14 +23,14 @@
             
             <a href="/login">
                 <div class="developer">
-                   Post Property
+                   <span>Property Owner</span>
                 </div>
             </a>
            
 
             <a href="/view_property">
                 <div class="tenant">
-                    Search Property
+                    <span>Search Property</span>
                 </div>
            </a>
         </div>
