--- a/backend/reactdjango/static/developer-properties.css
+++ b/backend/reactdjango/static/developer-properties.css
@@ -1,7 +1,42 @@
 .main-container{
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+   
+}
+
+.header{
+    background-color: #171923;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    align-items: center;
+
+}
+.logo{
+    margin-left: 20px;
+}
+.logo img{
+    width: 25%;
+    
+}
+.greet{
+    margin-right: 40px;
+}
+.home{
+    width: 2.7%;
+    border-radius: 50%;
+    height: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #171923;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+.fa-home:before {
+    color: white;
 }
 
 table {
