--- a/backend/reactdjango/templates/developer-property.html
+++ b/backend/reactdjango/templates/developer-property.html
@@ -1,13 +1,29 @@
+
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'developer-properties.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
 <div class="main-container">
+    
+    <div class="header">
+         <div class="logo">
+             <img src="{% static 'images/realestatelogo.png' %}" alt="">
+        </div>
+        <div class="greet">
+            <h3>welcome {{developer.name}}</h3>
+        </div>
+    </div>
+
+   
     <table>
         <thead>
             <tr>
@@ -49,6 +65,11 @@
             {% endfor %}
         </tbody>
     </table>
+   
+    <div class="home">
+        <a href="/developer-profile"><i class="fa fa-home" aria-hidden="true"></i></a>
+        
+    </div>
 
     <div id="myModal" class="modal">
         <div class="modal-content">
