--- a/backend/reactdjango/static/rentals.css
+++ b/backend/reactdjango/static/rentals.css
@@ -195,6 +195,7 @@ a{
     border: 1px solid black;
     height: 30px;
     width: 20%;
+    color: black;
 }
 .step-links ul a:hover{
     border: none;
@@ -292,7 +293,7 @@ a{
         list-style: none;
         border: 1px solid black;
         height: 30px;
-        width: 25%;
+        width: 29%;
         margin-right: 5px;
     }
 }
