--- a/backend/reactdjango/templates/on_sale_property_details.html
+++ b/backend/reactdjango/templates/on_sale_property_details.html
@@ -65,7 +65,7 @@
                 <p>Location :  {{on_sale_property.location}}</p>             
                 <p>Price : ksh {{on_sale_property.price|intcomma }}</p>
                 <p>deposit : ksh {{on_sale_property.deposit|intcomma }}</p>
-                <p>payment_process : {{on_sale_property.payment_process}}</p>
+                <p>payment process : {{on_sale_property.payment_process}}</p>
 
 
                 {% if on_sale_property.pin_location %}
