--- a/backend/reactdjango/static/developer-properties.css
+++ b/backend/reactdjango/static/developer-properties.css
@@ -45,7 +45,7 @@ table {
     border: 1px solid #ec8080;
     color: black;
     background-color: white;
-    margin-left: 5px;
+    margin-top: 5px;
 }
 th, td {
 text-align: left;
