--- a/backend/reactdjango/templates/developerpage.html
+++ b/backend/reactdjango/templates/developerpage.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="/developer-profile">Profile</a></li>
                     <li><a href="/developer_properties">My Properties</a></li>
-                    <li><a href="/post_rentals">Post house</a></li>
+                    <li><a href="/post_rentals">Post rental</a></li>
                     <li><a href="/sell_property">Sell property</a></li>
                    
                 </ul>
