--- a/backend/reactdjango/static/header.css
+++ b/backend/reactdjango/static/header.css
@@ -154,6 +154,9 @@ footer a:hover{
 }
 
 @media (max-width: 768px) {
+    body{
+        font-size: 15pxs;
+    }
     .moon{
         margin-right: 10px;
     }
