--- a/backend/reactdjango/static/rentals-edit.css
+++ b/backend/reactdjango/static/rentals-edit.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 .main-container{
     width: 100%;
    
@@ -92,5 +96,8 @@ input ,textarea{
     }
     h3{
         font-size: 15px;
+    }
+    .home{
+        width: 7%;
     }
 }
