--- a/backend/reactdjango/templates/developerpage.html
+++ b/backend/reactdjango/templates/developerpage.html
@@ -26,6 +26,8 @@
                     <li><a href="/developer_properties">My Properties</a></li>
                     <li><a href="/post_rentals">Post rental</a></li>
                     <li><a href="/sell_property">Sell property</a></li>
+
+                    <li><a href="/pay_rental">subscription</a></li>
                    
                 </ul>
 
