--- a/backend/reactdjango/templates/register.html
+++ b/backend/reactdjango/templates/register.html
@@ -28,7 +28,9 @@
                         <input  class="input" type="number" name="id_number" placeholder="input id number" maxlength="8">
 
                         <input  class="input" type="email" name="email"  placeholder="input email" required>
-           
+
+                        <input  class="input" type="number" name="phone_number"  placeholder="phone number (2547XXXXXXX)" required>
+
                         <input  class="input" type="password" name="password1" placeholder="input password" required >
                    
                         <input  class="input" type="password" name="password2" placeholder="confirm password" required> 
